--- a/.github/workflows/assignment4.yml
+++ b/.github/workflows/assignment4.yml
@@ -115,10 +115,12 @@ jobs:
           path: assn4_test_results.txt
 
       - name: Upload updated log artifact (after tests)
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: log
           path: log.txt
+          overwrite: true
 
       - name: Tear down Docker Compose (test job)
         if: always()
