--- a/.github/workflows/assignment4.yml
+++ b/.github/workflows/assignment4.yml
@@ -21,15 +21,17 @@ jobs:
       - name: Build Docker Images using Docker Compose
         run: |
           # Build images for all services defined in your docker-compose.yml
-          docker compose build
+          if docker compose build --no-cache; then
+            echo "image successfully built" >> log.txt
+            else
+            echo "image not able to be built" >> log.txt
+            exit 1
+          fi
 
       - name: Save Docker images as tar files
         run: |
           docker save stocks-1a:latest -o stocks-1a.tar
           docker save capital-gains:latest -o capital-gains.tar
-
-      - name: Append image build success to log
-        run: echo "image successfully built" >> log.txt
 
       - name: Upload Docker image artifacts
         uses: actions/upload-artifact@v4
