--- a/.github/workflows/assignment4.yml
+++ b/.github/workflows/assignment4.yml
@@ -191,6 +191,7 @@ jobs:
           done < query.txt
 
       - name: Upload query response artifact
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: query-response
