--- a/.github/workflows/assignment4.yml
+++ b/.github/workflows/assignment4.yml
@@ -182,10 +182,9 @@ jobs:
 
             echo "response:" >> response.txt
             if [ "$service" = "stocks" ]; then
-              echo "http://localhost:5001/stocks?${qs}" >> response.txt
-              curl "http://localhost:5001/stocks?${qs}" >> response.txt
+              curl "http://127.0.0.1:5001/stocks?${qs}" >> response.txt
             elif [ "$service" = "capital-gains" ]; then
-              curl "http://localhost:5003/capital-gains?${qs}" >> response.txt
+              curl "http://127.0.0.1:5003/capital-gains?${qs}" >> response.txt
             else
               echo "Unknown service" >> response.txt
             fi
