--- a/.github/workflows/assignment4.yml
+++ b/.github/workflows/assignment4.yml
@@ -146,6 +146,7 @@ jobs:
     name: query
     runs-on: ubuntu-latest
     needs: test
+    if: needs.test.outputs.test_success == 'true'
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
